data/forge_javadoc/1.7.10/raw/net/minecraft/world/gen/structure/StructureVillagePieces.WoodHut.md
---
title: "StructureVillagePieces.WoodHut"
description: "public static class StructureVillagePieces.WoodHut extends StructureVillagePieces.Village"
package: "net/minecraft/world/gen/structure"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/world/gen/structure/StructureVillagePieces.WoodHut.html"
sourceType: javadoc
---

# StructureVillagePieces.WoodHut

**Inheritance:** java.lang.Object → net.minecraft.world.gen.structure.StructureComponent → net.minecraft.world.gen.structure.StructureVillagePieces.Village → net.minecraft.world.gen.structure.StructureVillagePieces.WoodHut

## Class signature

```java
public static class StructureVillagePieces.WoodHut extends StructureVillagePieces.Village
```

## Methods

- `boolean addComponentParts(World p_74875_1_, java.util.Random p_74875_2_, StructureBoundingBox p_74875_3_)`
- `protected void func_143011_b(NBTTagCompound p_143011_1_)`
- `protected void func_143012_a(NBTTagCompound p_143012_1_)`
- `static StructureVillagePieces.WoodHut func_74908_a(StructureVillagePieces.Start p_74908_0_, java.util.List p_74908_1_, java.util.Random p_74908_2_, int p_74908_3_, int p_74908_4_, int p_74908_5_, int p_74908_6_, int p_74908_7_)`

## Fields

- `WoodHut`
- `WoodHut`
