data/forge_javadoc/1.8.9/raw/net/minecraft/world/gen/structure/StructureVillagePieces.WoodHut.md
---
title: "StructureVillagePieces.WoodHut"
description: "public static class StructureVillagePieces.WoodHut extends StructureVillagePieces.Village"
package: "net/minecraft/world/gen/structure"
version: "1.8.9"
forgeBuild: "11.15.1.2318"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.8.9-11.15.1.2318/net/minecraft/world/gen/structure/StructureVillagePieces.WoodHut.html"
sourceType: javadoc
---

# StructureVillagePieces.WoodHut

**Inheritance:** java.lang.Object → net.minecraft.world.gen.structure.StructureComponent → net.minecraft.world.gen.structure.StructureVillagePieces.Village → net.minecraft.world.gen.structure.StructureVillagePieces.WoodHut

## Class signature

```java
public static class StructureVillagePieces.WoodHut extends StructureVillagePieces.Village
```

## Methods

- `boolean addComponentParts(World worldIn, java.util.Random randomIn, StructureBoundingBox structureBoundingBoxIn)` — second Part of Structure generating, this for example places Spiderwebs, Mob Spawners, it closes Mineshafts at the end, it adds Fences...
- `static StructureVillagePieces.WoodHut func_175853_a(StructureVillagePieces.Start start, java.util.List<StructureComponent> p_175853_1_, java.util.Random rand, int p_175853_3_, int p_175853_4_, int p_175853_5_, EnumFacing facing, int p_175853_7_)`
- `protected void readStructureFromNBT(NBTTagCompound tagCompound)` — (abstract) Helper method to read subclass data from NBT
- `protected void writeStructureToNBT(NBTTagCompound tagCompound)` — (abstract) Helper method to write subclass data to NBT

## Fields

- `WoodHut`
- `WoodHut`
